--- a/site/style.css
+++ b/site/style.css
@@ -23,6 +23,16 @@ body {
     height: 1000px;
 }
 
+#questions-list button {
+    display: block;
+    width: 100%;
+    border: 0;
+    border-bottom: 1px solid rgb(104, 104, 104);
+    background-color: transparent;
+    font-size: 25px;
+    
+}
+
 #question-page {
     width: 80%;
 }
